--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IInput.cs" />
     <Compile Include="ILayer.cs" />
     <Compile Include="IOutput.cs" />
+    <Compile Include="Node\InputNode.cs" />
     <Compile Include="Node\ISynapse.cs" />
     <Compile Include="Node\Synapse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
