--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Compile Include="SynapseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BiasTest.cs" />
+    <Compile Include="NodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NeuralNetworkConstructor\NeuralNetworkConstructor.csproj">
