--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="SynapseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NodeTest.cs" />
+    <Compile Include="ActivationFunctionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NeuralNetworkConstructor\NeuralNetworkConstructor.csproj">
