--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ILayer.cs" />
     <Compile Include="IOutput.cs" />
     <Compile Include="Node\InputNode.cs" />
+    <Compile Include="Node\Neuron.cs" />
     <Compile Include="Node\Synapse\ISynapse.cs" />
     <Compile Include="Node\Synapse\Synapse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
