--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Network\Node\Synapse\ISynapse.cs" />
     <Compile Include="Network\Node\Synapse\Synapse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BackpropagationTeacher.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
