--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,6 @@ before_build:
   - nuget restore
 build_script:
   - choco install "msbuild-sonarqube-runner" -y
-  - MSBuild.SonarQube.Runner.exe begin /k:"NeuralNetworkConstructor" /d:"sonar.host.url=https://sonarqube.com" /d:"sonar.login=c2e717505450940ed52170d6a57adb92c475af69"
+  - MSBuild.SonarQube.Runner.exe begin /k:"neural-network-constructor" /d:"sonar.host.url=https://sonarqube.com" /d:"sonar.organization=a1essandro-github" /d:"sonar.login=c2e717505450940ed52170d6a57adb92c475af69"
   - msbuild "NeuralNetworkConstructor.sln"
   - MSBuild.SonarQube.Runner.exe end /d:"sonar.login=c2e717505450940ed52170d6a57adb92c475af69"
