--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -42,7 +42,7 @@
     <Compile Include="Network\Network.cs" />
     <Compile Include="Network\Node\ActivationFunction\IActivationFunction.cs" />
     <Compile Include="Network\Node\ActivationFunction\Logistic.cs" />
-    <Compile Include="Network\Node\ActivationFunction\SimpleActivationFunction.cs" />
+    <Compile Include="Network\Node\ActivationFunction\Rectifier.cs" />
     <Compile Include="Network\Node\Bias.cs" />
     <Compile Include="Network\Node\INode.cs" />
     <Compile Include="Common\IInput.cs" />
