--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -56,8 +56,9 @@
     <Compile Include="Common\IOutput.cs" />
     <Compile Include="Network\Node\InputNode.cs" />
     <Compile Include="Network\Node\ISlaveNode.cs" />
-    <Compile Include="Network\Node\ISummator.cs" />
+    <Compile Include="Network\Node\Summator\ISummator.cs" />
     <Compile Include="Network\Node\Neuron.cs" />
+    <Compile Include="Network\Node\Summator\Summator.cs" />
     <Compile Include="Network\Node\Synapse\ISynapse.cs" />
     <Compile Include="Network\Node\Synapse\Synapse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
