Reformat project and xUnit tests

--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -1,80 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CACB01B9-6307-4549-B5D8-59C298B58949}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeuralNetworkConstructor</RootNamespace>
-    <AssemblyName>NeuralNetworkConstructor</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>false</RunCodeAnalysis>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>false</RunCodeAnalysis>
-  </PropertyGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Common\IRefreshable.cs" />
-    <Compile Include="Learning\BackpropagationStrategy.cs" />
-    <Compile Include="Learning\Learning.cs" />
-    <Compile Include="Learning\LearningStrategy.cs" />
-    <Compile Include="Network\KohonenNetwork.cs" />
-    <Compile Include="Network\Layer\Layer.cs" />
-    <Compile Include="Network\INetwork.cs" />
-    <Compile Include="Network\Network.cs" />
-    <Compile Include="Network\Node\ActivationFunction\Gaussian.cs" />
-    <Compile Include="Network\Node\ActivationFunction\IActivationFunction.cs" />
-    <Compile Include="Network\Node\ActivationFunction\Linear.cs" />
-    <Compile Include="Network\Node\ActivationFunction\Logistic.cs" />
-    <Compile Include="Network\Node\ActivationFunction\Rectifier.cs" />
-    <Compile Include="Network\Node\Bias.cs" />
-    <Compile Include="Network\Node\Context.cs" />
-    <Compile Include="Network\Node\INode.cs" />
-    <Compile Include="Common\IInput.cs" />
-    <Compile Include="Network\Layer\ILayer.cs" />
-    <Compile Include="Common\IOutput.cs" />
-    <Compile Include="Network\Node\InputNode.cs" />
-    <Compile Include="Network\Node\ISlaveNode.cs" />
-    <Compile Include="Network\Node\Summator\ISummator.cs" />
-    <Compile Include="Network\Node\Neuron.cs" />
-    <Compile Include="Network\Node\Summator\EuclidRangeSummator.cs" />
-    <Compile Include="Network\Node\Summator\Summator.cs" />
-    <Compile Include="Network\Node\Synapse\ISynapse.cs" />
-    <Compile Include="Network\Node\Synapse\Synapse.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BackpropagationTeacher.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
