--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -1,7 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
+        <PackageId>NeuralNetworkConstructor</PackageId>
+        <Version>$(Version)</Version>
+        <PackageVersion>$(PackageVersion)</PackageVersion>
+        <Authors>Alexander Yermakov</Authors>
+        <PackageTags>neural network</PackageTags>
+        <PackageLicenseUrl>https://github.com/A1essandro/NeuralNetworkConstructor/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageProjectUrl>https://github.com/A1essandro/NeuralNetworkConstructor</PackageProjectUrl>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/A1essandro/NeuralNetworkConstructor.git</RepositoryUrl>
+        <RootNamespace>NeuralNetworkConstructor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
