--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,28 @@
-version: 0.2.{build}
-image: Previous Visual Studio 2017
+version: 0.1.{build}
+image: Visual Studio 2017
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
-  version: '{version}'
-  package_version: '{version}'
-  assembly_version: '{version}'
-  file_version: '{version}'
-  informational_version: '{version}'
+  version: "{version}"
+  package_version: "{version}"
 before_build:
-  - nuget restore
-build_script:
   - choco install "msbuild-sonarqube-runner" -y
+  - dotnet restore
   - MSBuild.SonarQube.Runner.exe begin /k:"neural-network-constructor" /d:"sonar.host.url=https://sonarqube.com" /d:"sonar.organization=a1essandro-github" /d:"sonar.login=c2e717505450940ed52170d6a57adb92c475af69"
-  - msbuild "NeuralNetworkConstructor.sln"
+build:
+  verbosity: normal
+  # publish_nuget: true
+after_build:
   - MSBuild.SonarQube.Runner.exe end /d:"sonar.login=c2e717505450940ed52170d6a57adb92c475af69"
+  - dotnet pack NeuralNetworkConstructor -v=n /p:Configuration=Release /p:PackageVersion=%APPVEYOR_BUILD_VERSION%
+artifacts:
+- path: '**\*.nupkg'
+  name: NuGet Packages
+deploy:
+  provider: NuGet
+  api_key:
+    secure: 4HWYue95aIcpxcp09bhEMf+3D6JHfKP+dQbSxf5ba0FvN1NK+3W7KWKi0YZZBjAd
+  artifact: /.*\.nupkg/
+  on:
+    #appveor_repo_tag: true
+    branch: master
