--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -1,21 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
-        <PackageId>NeuralNetworkConstructor</PackageId>
-        <Version>$(Version)</Version>
-        <PackageVersion>$(PackageVersion)</PackageVersion>
-        <Authors>Alexander Yermakov</Authors>
-        <PackageTags>neural network</PackageTags>
-        <PackageLicenseUrl>https://github.com/A1essandro/NeuralNetworkConstructor/blob/master/LICENSE</PackageLicenseUrl>
-        <PackageProjectUrl>https://github.com/A1essandro/NeuralNetworkConstructor</PackageProjectUrl>
-        <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/A1essandro/NeuralNetworkConstructor.git</RepositoryUrl>
-        <RootNamespace>NeuralNetworkConstructor</RootNamespace>
+    <PackageId>NeuralNetworkConstructor</PackageId>
+    <Version>$(Version)</Version>
+    <PackageVersion>$(PackageVersion)</PackageVersion>
+    <Authors>Alexander Yermakov</Authors>
+    <PackageTags>neural network</PackageTags>
+    <PackageLicenseUrl>https://github.com/A1essandro/NeuralNetworkConstructor/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/A1essandro/NeuralNetworkConstructor</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/A1essandro/NeuralNetworkConstructor.git</RepositoryUrl>
+    <RootNamespace>NeuralNetworkConstructor</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Nito.AsyncEx" Version="4.0.1" />
+    <PackageReference Include="Nito.AsyncEx" Version="5.0.0-pre-05"/>
   </ItemGroup>
-
 </Project>
