Add Network.Clone method (clone via DataContractSerializer)

--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0-pre-05"/>
     <PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0"/>
+    <PackageReference Include="System.Runtime.Serialization.Xml" Version="4.3.0"/>
   </ItemGroup>
 </Project>
