--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -10,12 +10,11 @@
     <PackageProjectUrl>https://github.com/A1essandro/NeuralNetworkConstructor</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/A1essandro/NeuralNetworkConstructor.git</RepositoryUrl>
-    <RootNamespace>NeuralNetwork</RootNamespace>
+    <RootNamespace>NeuralNetworkConstructor</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0-pre-05"/>
     <PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0"/>
     <PackageReference Include="System.Runtime.Serialization.Xml" Version="4.3.0"/>
-    <PackageReference Include="System.Linq.Parallel" Version="4.3.0"/>
   </ItemGroup>
 </Project>
