Structure to separate nuget package

--- a/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
+++ b/NeuralNetworkConstructor/NeuralNetworkConstructor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
     <PackageId>NeuralNetworkConstructor</PackageId>
@@ -13,8 +13,9 @@
     <RootNamespace>NeuralNetworkConstructor</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0"/>
-    <PackageReference Include="System.Runtime.Serialization.Xml" Version="4.3.0"/>
-    <PackageReference Include="System.Threading.Tasks.Parallel" Version="4.3.0"/>
+    <PackageReference Include="NeuralNetwork.Structure" Version="0.1.2" />
+    <PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0" />
+    <PackageReference Include="System.Runtime.Serialization.Xml" Version="4.3.0" />
+    <PackageReference Include="System.Threading.Tasks.Parallel" Version="4.3.0" />
   </ItemGroup>
 </Project>
