--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NeuralNetwork.Learning" Version="0.1.1" />
     <ProjectReference Include="..\NeuralNetworkConstructor\NeuralNetworkConstructor.csproj" />
   </ItemGroup>
 
